refactor, correct typos

--- a/index.html
+++ b/index.html
@@ -29,84 +29,8 @@
   <script src="js/carousel.js"></script>
 
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="css/style_index_page.css">
   <link rel="icon" type="image/png" href="images/zifeng_avatar.jpg">
-
-
-  <style type="text/css">
-    .carousel {
-      -webkit-transform: translate3d(0, 0, 0);
-      background: rgba(0, 0, 0, 0.85);
-      position: fixed;
-      right: 0;
-      bottom: 0;
-      min-width: 100%;
-      min-height: 100%;
-      width: auto;
-      height: auto;
-      display: none;
-      z-index: 1;
-    }
-
-    .img-center-carousel {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      padding: 0;
-      margin: auto;
-      width: 60%;
-      height: auto;
-    }
-
-    .carousel-close {
-      position: absolute;
-      top: 25px;
-      right: 100px;
-      padding: 0;
-      margin: auto;
-      width: 50px;
-      height: auto;
-    }
-
-    .research {
-      margin-bottom: 30px;
-    }
-
-    .research h4 {
-      float: left;
-    }
-
-    .research div {
-      text-align: end;
-      font-size: 0.9em;
-    }
-
-    .thumbnail {
-      width: 100%;
-      float: left;
-
-    }
-
-    .thumbnail-right {
-      margin-left: 35%;
-    }
-
-    #exp li {
-      margin-bottom: 50px;
-    }
-
-    .school-logo {
-      width: 6%;
-      float: left;
-    }
-
-    .school-text {
-      margin-left: 10%;
-      width: 60%;
-    }
-  </style>
-
 </head>
 
 <body>
@@ -304,11 +228,11 @@
 
             <tr>
               <td width="32%">
-                <img class="thumbnail" src="paper_images/modelswarms.png" data-id="qf-carousel"></img>
-                <div id="qf-carousel" class="carousel">
+                <img class="thumbnail" src="paper_images/modelswarms.png" data-id="ms-carousel"></img>
+                <div id="ms-carousel" class="carousel">
                   <img class="img-center-carousel" src="paper_images/modelswarms.png" alt="">
                   <a href="javascript:void(0)"><img src="images/close-transparent.png" alt=""
-                      data-carousel-id="qf-carousel" class="carousel-close"></a>
+                      data-carousel-id="ms-carousel" class="carousel-close"></a>
                 </div>
               </td>
 
@@ -331,11 +255,11 @@
 
             <tr>
               <td width="32%">
-                <img class="thumbnail" src="paper_images/skd.png" data-id="qf-carousel"></img>
-                <div id="qf-carousel" class="carousel">
+                <img class="thumbnail" src="paper_images/skd.png" data-id="skd-carousel"></img>
+                <div id="skd-carousel" class="carousel">
                   <img class="img-center-carousel" src="paper_images/skd.png" alt="">
                   <a href="javascript:void(0)"><img src="images/close-transparent.png" alt=""
-                      data-carousel-id="qf-carousel" class="carousel-close"></a>
+                      data-carousel-id="skd-carousel" class="carousel-close"></a>
                 </div>
               </td>
 
@@ -357,11 +281,11 @@
 
             <tr>
               <td width="32%">
-                <img class="thumbnail" src="paper_images/revThink.png" data-id="qf-carousel"></img>
-                <div id="qf-carousel" class="carousel">
+                <img class="thumbnail" src="paper_images/revThink.png" data-id="rt-carousel"></img>
+                <div id="rt-carousel" class="carousel">
                   <img class="img-center-carousel" src="paper_images/revThink.png" alt="">
                   <a href="javascript:void(0)"><img src="images/close-transparent.png" alt=""
-                      data-carousel-id="qf-carousel" class="carousel-close"></a>
+                      data-carousel-id="rt-carousel" class="carousel-close"></a>
                 </div>
               </td>
 
@@ -383,11 +307,11 @@
 
             <tr>
               <td width="32%">
-                <img class="thumbnail" src="paper_images/speculativeRAG.png" data-id="qf-carousel"></img>
-                <div id="qf-carousel" class="carousel">
+                <img class="thumbnail" src="paper_images/speculativeRAG.png" data-id="sr-carousel"></img>
+                <div id="sr-carousel" class="carousel">
                   <img class="img-center-carousel" src="paper_images/speculativeRAG.png" alt="">
                   <a href="javascript:void(0)"><img src="images/close-transparent.png" alt=""
-                      data-carousel-id="qf-carousel" class="carousel-close"></a>
+                      data-carousel-id="sr-carousel" class="carousel-close"></a>
                 </div>
               </td>
 
@@ -409,11 +333,11 @@
 
             <tr>
               <td width="32%">
-                <img class="thumbnail" src="paper_images/tableRAG.png" data-id="qf-carousel"></img>
-                <div id="qf-carousel" class="carousel">
+                <img class="thumbnail" src="paper_images/tableRAG.png" data-id="tr-carousel"></img>
+                <div id="tr-carousel" class="carousel">
                   <img class="img-center-carousel" src="paper_images/tableRAG.png" alt="">
                   <a href="javascript:void(0)"><img src="images/close-transparent.png" alt=""
-                      data-carousel-id="qf-carousel" class="carousel-close"></a>
+                      data-carousel-id="tr-carousel" class="carousel-close"></a>
                 </div>
               </td>
 
@@ -436,11 +360,11 @@
             
             <tr>
               <td width="32%">
-                <img class="thumbnail" src="paper_images/calm.png" data-id="qf-carousel"></img>
-                <div id="qf-carousel" class="carousel">
+                <img class="thumbnail" src="paper_images/calm.png" data-id="calm-carousel"></img>
+                <div id="calm-carousel" class="carousel">
                   <img class="img-center-carousel" src="paper_images/calm.png" alt="">
                   <a href="javascript:void(0)"><img src="images/close-transparent.png" alt=""
-                      data-carousel-id="qf-carousel" class="carousel-close"></a>
+                      data-carousel-id="calm-carousel" class="carousel-close"></a>
                 </div>
               </td>
 
@@ -462,11 +386,11 @@
 
             <tr>
               <td width="32%">
-                <img class="thumbnail" src="paper_images/fitm.png" data-id="qf-carousel"></img>
-                <div id="qf-carousel" class="carousel">
+                <img class="thumbnail" src="paper_images/fitm.png" data-id="fitm-carousel"></img>
+                <div id="fitm-carousel" class="carousel">
                   <img class="img-center-carousel" src="paper_images/fitm.png" alt="">
                   <a href="javascript:void(0)"><img src="images/close-transparent.png" alt=""
-                      data-carousel-id="qf-carousel" class="carousel-close"></a>
+                      data-carousel-id="fitm-carousel" class="carousel-close"></a>
                 </div>
               </td>
 
@@ -488,11 +412,11 @@
 
             <tr>
               <td width="32%">
-                <img class="thumbnail" src="paper_images/codeclm.png" data-id="qf-carousel"></img>
-                <div id="qf-carousel" class="carousel">
+                <img class="thumbnail" src="paper_images/codeclm.png" data-id="codeclm-carousel"></img>
+                <div id="codeclm-carousel" class="carousel">
                   <img class="img-center-carousel" src="paper_images/codeclm.png" alt="">
                   <a href="javascript:void(0)"><img src="images/close-transparent.png" alt=""
-                      data-carousel-id="qf-carousel" class="carousel-close"></a>
+                      data-carousel-id="codeclm-carousel" class="carousel-close"></a>
                 </div>
               </td>
 
@@ -514,11 +438,11 @@
 
             <tr>
               <td width="32%">
-                <img class="thumbnail" src="paper_images/chain-of-table.png" data-id="qf-carousel"></img>
-                <div id="qf-carousel" class="carousel">
+                <img class="thumbnail" src="paper_images/chain-of-table.png" data-id="cot-carousel"></img>
+                <div id="cot-carousel" class="carousel">
                   <img class="img-center-carousel" src="paper_images/chain-of-table.png" alt="">
                   <a href="javascript:void(0)"><img src="images/close-transparent.png" alt=""
-                      data-carousel-id="qf-carousel" class="carousel-close"></a>
+                      data-carousel-id="cot-carousel" class="carousel-close"></a>
                 </div>
               </td>
 
@@ -568,11 +492,11 @@
 
             <tr>
               <td width="32%">
-                <img class="thumbnail" src="paper_images/dualhsic.png" data-id="hbar-carousel"></img>
-                <div id="hbar-carousel" class="carousel">
+                <img class="thumbnail" src="paper_images/dualhsic.png" data-id="dualhsic-carousel"></img>
+                <div id="dualhsic-carousel" class="carousel">
                   <img class="img-center-carousel" src="paper_images/dualhsic.png" alt="">
                   <a href="javascript:void(0)"><img src="images/close-transparent.png" alt=""
-                      data-carousel-id="hbar-carousel" class="carousel-close"></a>
+                      data-carousel-id="dualhsic-carousel" class="carousel-close"></a>
                 </div>
               </td>
 
@@ -597,11 +521,11 @@
 
             <tr>
               <td width="32%">
-                <img class="thumbnail" src="paper_images/sparcl.png" data-id="hbar-carousel"></img>
-                <div id="hbar-carousel" class="carousel">
+                <img class="thumbnail" src="paper_images/sparcl.png" data-id="sparcl-carousel"></img>
+                <div id="sparcl-carousel" class="carousel">
                   <img class="img-center-carousel" src="paper_images/sparcl.png" alt="">
                   <a href="javascript:void(0)"><img src="images/close-transparent.png" alt=""
-                      data-carousel-id="hbar-carousel" class="carousel-close"></a>
+                      data-carousel-id="sparcl-carousel" class="carousel-close"></a>
                 </div>
               </td>
 
@@ -628,11 +552,11 @@
 
             <tr>
               <td width="32%">
-                <img class="thumbnail" src="paper_images/dualprompt.png" data-id="hbar-carousel"></img>
-                <div id="hbar-carousel" class="carousel">
+                <img class="thumbnail" src="paper_images/dualprompt.png" data-id="dualprompt-carousel"></img>
+                <div id="dualprompt-carousel" class="carousel">
                   <img class="img-center-carousel" src="paper_images/dualprompt.png" alt="">
                   <a href="javascript:void(0)"><img src="images/close-transparent.png" alt=""
-                      data-carousel-id="hbar-carousel" class="carousel-close"></a>
+                      data-carousel-id="dualprompt-carousel" class="carousel-close"></a>
                 </div>
               </td>
 
@@ -658,11 +582,11 @@
 
             <tr>
               <td width="32%">
-                <img class="thumbnail" src="paper_images/l2p.png" data-id="hbar-carousel"></img>
-                <div id="hbar-carousel" class="carousel">
+                <img class="thumbnail" src="paper_images/l2p.png" data-id="l2p-carousel"></img>
+                <div id="l2p-carousel" class="carousel">
                   <img class="img-center-carousel" src="paper_images/l2p.png" alt="">
                   <a href="javascript:void(0)"><img src="images/close-transparent.png" alt=""
-                      data-carousel-id="hbar-carousel" class="carousel-close"></a>
+                      data-carousel-id="l2p-carousel" class="carousel-close"></a>
                 </div>
               </td>
 
