add icml25 and fix typo

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <br>
                 Shangbin Feng, <b>Zifeng Wang</b>, Yike Wang, Sayna Ebrahimi, Hamid Palangi, Lesly Miculicich, Achin Kulshrestha, Nathalie Rauschmayr, Yejin Choi, Yulia Tsvetkov, Chen-Yu Lee, Tomas Pfister
                   <br>
-                  Arxiv, 2024. <br> </em>
+                  <em>International Conference on Machine Learning (<b>ICML</b>), 2025. <br> </em>
                 [<a href="https://arxiv.org/abs/2410.11163.pdf">paper</a>]
                 <br>
                 <p></p>
@@ -274,7 +274,7 @@
                 <br>
                 Wenda Xu, Rujun Han, <b>Zifeng Wang</b>, Long T. Le, Dhruv Madeka, Lei Li, William Yang Wang, Rishabh Agarwal, Chen-Yu Lee, Tomas Pfister
                   <br>
-                  International Conference on Learning Representations (<b>ICLR</b>), 2025. <br> </em>
+                  <em> International Conference on Learning Representations (<b>ICLR</b>), 2025. <br> </em>
                 [<a href="https://arxiv.org/abs/2410.11325.pdf">paper</a>]
                 <br>
                 <p></p>
@@ -300,7 +300,7 @@
                 <br>
                 Justin Chih-Yao Chen, <b>Zifeng Wang</b>, Hamid Palangi, Rujun Han, Sayna Ebrahimi, Long Le, Vincent Perot, Swaroop Mishra, Mohit Bansal, Chen-Yu Lee, Tomas Pfister
                   <br>
-                  The Nations of the Americas Chapter of the Association for Computational Linguistics <em> (<b>NAACL</b>), 2025. <br> </em>
+                  <em> The Nations of the Americas Chapter of the Association for Computational Linguistics (<b>NAACL</b>), 2025. <br> </em>
                 [<a href="https://arxiv.org/abs/2411.19865.pdf">paper</a>]
                 <br>
                 <p></p>
@@ -326,7 +326,7 @@
                 <br>
                 Zilong Wang, <b>Zifeng Wang</b>, Long Le, Huaixiu Steven Zheng, Swaroop Mishra, Vincent Perot, Yuwei Zhang, Anush Mattapalli, Ankur Taly, Jingbo Shang, Chen-Yu Lee, Tomas Pfister
                   <br>
-                  International Conference on Learning Representations (<b>ICLR</b>), 2025. <br> </em>
+                  <em> International Conference on Learning Representations (<b>ICLR</b>), 2025. <br> </em>
                 [<a href="https://arxiv.org/abs/2407.08223.pdf">paper</a>][<a href="https://research.google/blog/speculative-rag-enhancing-retrieval-augmented-generation-through-drafting/">blog</a>]
                 <br>
                 <p></p>
@@ -352,7 +352,7 @@
                 <br>
                 Si-An Chen, Lesly Miculicich, Julian Martin Eisenschlos, <b>Zifeng Wang</b>, Zilong Wang, Yanfei Chen, Yasuhisa Fujii, Hsuan-Tien Lin, Chen-Yu Lee, Tomas Pfister
                   <br>
-                  Neural Information Processing Systems (<b>NeurIPS</b>), 2024. <br> </em>
+                  <em> Neural Information Processing Systems (<b>NeurIPS</b>), 2024. <br> </em>
                 [<a href="https://arxiv.org/abs/2410.04739.pdf">paper</a>][<a href="https://github.com/google-research/google-research/tree/master/table_rag">code</a>]
                 <br>
                 <p></p>
@@ -378,7 +378,7 @@
                 <br>
                 I-Hung Hsu, <b>Zifeng Wang</b>, Long T Le, Lesly Miculicich, Nanyun Peng, Chen-Yu Lee, Tomas Pfister
                   <br>
-                  Findings of the Association for Computational Linguistics <em> (<b>ACL</b>), 2024. <br> </em>
+                  <em> Findings of the Association for Computational Linguistics (<b>ACL</b>), 2024. <br> </em>
                 [<a href="https://arxiv.org/abs/2406.05365.pdf">paper</a>]
                 <br>
                 <p></p>
@@ -404,7 +404,7 @@
                 <br>
                 Cheng-Yu Hsieh, Yung-Sung Chuang, Chun-Liang Li, <b>Zifeng Wang</b>, Long T. Le, Abhishek Kumar, James Glass, Alexander Ratner, Chen-Yu Lee, Ranjay Krishna, Tomas Pfister
                   <br>
-                  Findings of the Association for Computational Linguistics <em> (<b>ACL</b>), 2024. <br> </em>
+                  <em> Findings of the Association for Computational Linguistics (<b>ACL</b>), 2024. <br> </em>
                 [<a href="https://arxiv.org/abs/2406.16008.pdf">paper</a>]
                 <br>
                 <p></p>
@@ -430,7 +430,7 @@
                 <br>
                 <b>Zifeng Wang</b>, Chun-Liang Li, Vincent Perot, Long T. Le, Jin Miao, Zizhao Zhang, Chen-Yu Lee, Tomas Pfister
                   <br>
-                  Findings of North American Chapter of the Association for Computational Linguistics <em> (<b>NAACL</b>), 2024. <br> </em>
+                  <em> Findings of North American Chapter of the Association for Computational Linguistics (<b>NAACL</b>), 2024. <br> </em>
                 [<a href="https://arxiv.org/abs/2404.05875.pdf">paper</a>][<a href="https://research.google/blog/codeclm-aligning-language-models-with-tailored-synthetic-data/">blogpost</a>]
                 <br>
                 <p></p>
