add new papers at ACL25' and H-Swarms

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
                   <ul>
                     <li>Large Language Models</li>
                     <ul>
-                      <li>Model adaptation and customization</li>
-                      <li>Multi-LLM collaboration and interaction</li>
+                      <li>Model alignment and adaptation</li>
+                      <li>Synthetic data for post-training and evaluation</li>
                       <li>LLM agents and multi-agent systems</li>
-                      <li>Synthetic data generation</li>
+                      <li>Cost-effective LLM inference (e.g., Routing, Distillation)</li>
                     </ul>
                     <li>Continual (Lifelong) Learning</li>
                     <li>Open Set Recognition / Novel Class Discovery</li>
@@ -97,60 +97,6 @@
               </tr>
             </tbody>
           </table>
-
-
-          <!-- <table
-            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-            <tbody>
-              <tr>
-                <td style="padding:20px;width:100%;vertical-align:middle">
-                  <heading>News</heading>
-                  <p>
-                  <ul>
-                    <li> 07/2023: I will be giving a talk on effective and efficient continual learning at <b> <a
-                      href="https://www.a-star.edu.sg/cfar/events/effective-and-efficient-continual-learning">A*STAR</a> </b>, thanks for hosting!
-                    <li> 05/2023: Our paper on document entity extraction is accepted at <b> ACL 2023 </b> (Findings)
-                    <li> 04/2022: I received the <b> Outstanding Student Award in Research</b> from COE, Northeastern
-                      University </li>
-                    <li> 04/2023: Our paper on continual learning is accepted at <b> ICML 2023 </b>, code will be
-                      released soon! </li>
-                    <li> 02/2023: I am glad to give talks about efficient and sparse continual learning at <b> <a
-                          href="https://www.continualai.org/">ContinualAI</a> </b> and <b> <a
-                          href="https://www.aitime.cn/">AI Time</a> </b> </li>
-                    <li> 10/2022: I received the <b> Scholar Award for NeurIPS 2022 </b> </li>
-                    <li> 09/2022: Our paper on efficient continual learning is accepted at <b> NeurIPS 2022 </b> </li>
-                    <li> 09/2022: I am glad to give a talk about prompting-based continual learning at <b> <a
-                          href="https://www.continualai.org/">ContinualAI</a></b></li>
-                    <li> 09/2022: Our paper on adversarially robust pruning is accepted at <b> ICDM 2022 </b> </li>
-                    <li> 07/2022: Our paper on prompting-based continual learning is accepted at <b> ECCV 2022 </b>
-                    </li>
-                    <li> 03/2022: Our paper on prompting-based continual learning is accepted at <b> CVPR 2022 </b>
-                    </li>
-                    <li> <a href="javascript:toggle_vis('news')">Earlier news</a> </li>
-                    <div id="news" style="display:none">
-                      <li> 02/2022: Our paper on Bayesian continual learning is accepted by <b> Neural Networks </b>
-                      </li>
-                      <li> 09/2021: Our paper on HSIC for adversarial robustness is accepted at <b> NeurIPS 2021 </b>
-                      </li>
-                      <li> 09/2021: Our paper on deep learning for smoking prediction is accepted by <b> PLOS
-                          Computational Biology </b> </li>
-                      <li> 05/2021: I started my research internship at <b> <a
-                            href="https://research.google/teams/cloud-ai/">Google Cloud AI Research</a> </b> </li>
-                      <li> 09/2020: Our paper on feature grouping is accepted at <b> NeurIPS 2021 </b> </li>
-                      <li> 08/2020: Two papers on continual learning and open-world class discovery are accepted at <b>
-                          ICDM 2020 </b>, with one selected as <b>
-                          <font color=red> the best paper candidate </font>
-                        </b> </li>
-                      <li> 08/2019: One paper on unseen class detection is accepted at <b> DySPAN 2019 </b> as the <b>
-                          <font color=red> best paper </font>
-                        </b> </li>
-                    </div>
-                  </ul>
-                  </p>
-                </td>
-              </tr>
-            </tbody>
-          </table> -->
 
           <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
